@@ -42,229 +42,45 @@ public class ResGenerationAssemblerServiceImpl implements ResGenerationAssembler
     private static final String SERIES_BY_ZONE_AND_TECH = "series_by_zone_and_tech";
     private static final String IN_RES_GROUP_SUFFIX = " in RES group ";
 
-    private static final Set<String> VALID_FR_ZONES = buildFrZones();
-
     private final NasFileService nasFileService;
     private final AntaresDataManagerProperties antaresDataManagerProperties;
     private final PathSecurityUtil pathSecurityUtil;
 
     @Override
     public Map<String, Map<String, Object>> assembleResProperties(StudyEntity studyEntity) {
-        if (studyEntity.getTrajectories() == null || studyEntity.getTrajectories().isEmpty()) {
+        var trajectories = studyEntity.getTrajectories();
+        if (trajectories == null || trajectories.isEmpty()) {
             return Collections.emptyMap();
         }
 
-        Map<String, List<ResClusterCapacityEntity>> capacitiesByArea = collectCapacitiesByArea(studyEntity);
-        if (capacitiesByArea.isEmpty()) {
+        var collections = collectTrajectoriesSinglePass(studyEntity);
+        var capacities = collections.capacities();
+
+        if (capacities.isEmpty()) {
             return Collections.emptyMap();
         }
-        Set<String> expectedSeriesPrefixes = buildExpectedSeriesPrefixes(capacitiesByArea);
 
-        Map<String, List<ResTechnologyDistributionEntity>> technologyByArea = collectTechnologyByArea(studyEntity);
-        Map<String, List<ResZonalDistributionEntity>> zonalByArea = collectZonalByArea(studyEntity);
-        List<ResSeriesRef> generatedSeries = createArrowSeriesForResLoad(studyEntity, expectedSeriesPrefixes);
+        var series = createArrowSeriesForResLoad(studyEntity);
+        var frSeriesIndex = indexFrSeries(series);
+        var nonFrSeriesIndex = indexNonFrSeries(series);
 
-        Map<String, Map<String, Object>> resByArea = new LinkedHashMap<>();
-        capacitiesByArea.forEach((area, capacities) -> {
-            Map<String, Object> clusters = buildClustersForArea(
-                    area,
-                    capacities,
-                    technologyByArea.getOrDefault(area, Collections.emptyList()),
-                    zonalByArea.getOrDefault(area, Collections.emptyList()),
-                    generatedSeries
-            );
-            resByArea.put(area, clusters);
-        });
-
-        return resByArea;
+        return processAreaClusters(capacities, collections, frSeriesIndex, nonFrSeriesIndex);
     }
 
-    private Map<String, List<ResClusterCapacityEntity>> collectCapacitiesByArea(StudyEntity studyEntity) {
-        return studyEntity.getTrajectories().stream()
-                .filter(Objects::nonNull)
-                .filter(t -> TrajectoryType.RES_CAPACITY.name().equals(t.getType()))
-                .map(TrajectoryEntity::getResClusterCapacityEntities)
-                .filter(Objects::nonNull)
-                .flatMap(Collection::stream)
-                .filter(Objects::nonNull)
-                .filter(e -> Boolean.TRUE.equals(e.getToUse()))
-                .filter(e -> e.getArea() != null && e.getGroupe() != null && e.getCluster() != null)
-                .collect(Collectors.groupingBy(e -> e.getArea().toUpperCase(Locale.ROOT), LinkedHashMap::new, Collectors.toList()));
-    }
-
-    private Map<String, List<ResTechnologyDistributionEntity>> collectTechnologyByArea(StudyEntity studyEntity) {
-        return studyEntity.getTrajectories().stream()
-                .filter(Objects::nonNull)
-                .filter(t -> TrajectoryType.RES_TECHNOLOGY_DISTRIBUTION.name().equals(t.getType()))
-                .map(TrajectoryEntity::getResTechnologyDistributionCapacityEntities)
-                .filter(Objects::nonNull)
-                .flatMap(Collection::stream)
-                .filter(Objects::nonNull)
-                .filter(e -> e.getArea() != null && e.getGroupe() != null && e.getPecdZone() != null && e.getPecdTechnology() != null)
-                .collect(Collectors.groupingBy(e -> e.getArea().toUpperCase(Locale.ROOT), LinkedHashMap::new, Collectors.toList()));
-    }
-
-    private Map<String, List<ResZonalDistributionEntity>> collectZonalByArea(StudyEntity studyEntity) {
-        return studyEntity.getTrajectories().stream()
-                .filter(Objects::nonNull)
-                .filter(t -> TrajectoryType.RES_ZONAL_DISTRIBUTION.name().equals(t.getType()))
-                .map(TrajectoryEntity::getResZonalDistributionCapacityEntities)
-                .filter(Objects::nonNull)
-                .flatMap(Collection::stream)
-                .filter(Objects::nonNull)
-                .filter(e -> e.getArea() != null && e.getGroupe() != null && e.getPecdZone() != null)
-                .collect(Collectors.groupingBy(e -> e.getArea().toUpperCase(Locale.ROOT), LinkedHashMap::new, Collectors.toList()));
-    }
-
-    private Set<String> buildExpectedSeriesPrefixes(Map<String, List<ResClusterCapacityEntity>> capacitiesByArea) {
-        return capacitiesByArea.values().stream()
-                .flatMap(Collection::stream)
-                .map(ResClusterCapacityEntity::getGroupe)
-                .filter(Objects::nonNull)
-                .map(this::normalizeGroup)
-                .map(this::prefixFromGroup)
-                .collect(Collectors.toCollection(LinkedHashSet::new));
-    }
-
-    private Map<String, Object> buildClustersForArea(
+    private record ClusterAggregationContext(
             String area,
-            List<ResClusterCapacityEntity> capacities,
-            List<ResTechnologyDistributionEntity> technologyDistributions,
+            List<ResTechnologyDistributionEntity> techDistributions,
             List<ResZonalDistributionEntity> zonalDistributions,
-            List<ResSeriesRef> generatedSeries
-    ) {
-        Map<String, List<ResClusterCapacityEntity>> byGroup = capacities.stream()
-                .collect(Collectors.groupingBy(cap -> normalizeGroup(cap.getGroupe()), LinkedHashMap::new, Collectors.toList()));
+            Map<String, ResSeriesRef> frSeriesIndex,
+            Map<String, ResSeriesRef> nonFrSeriesIndex
+    ) {}
 
-        Map<String, Object> areaRes = new LinkedHashMap<>();
-        byGroup.forEach((groupKey, entities) -> {
-            double installedPower = entities.stream()
-                    .map(ResClusterCapacityEntity::getCapacityByYear)
-                    .filter(Objects::nonNull)
-                    .mapToDouble(BigDecimal::doubleValue)
-                    .sum();
+    private String resolveIndexedSingleSeries(String area, String group, Map<String, ResSeriesRef> nonFrSeriesIndex) {
+        var lookupKey = area.toUpperCase(Locale.ROOT) + "_" + group.toUpperCase(Locale.ROOT);
+        var match = nonFrSeriesIndex.get(lookupKey);
 
-            Map<String, Object> clusterPropertiesMap = new LinkedHashMap<>();
-            clusterPropertiesMap.put(CAPACITY, installedPower);
-            clusterPropertiesMap.put(GROUP, groupKey);
-
-            Map<String, Object> clusterMap = new LinkedHashMap<>();
-            clusterMap.put(PROPERTIES, clusterPropertiesMap);
-
-            if (FR_AREA.equalsIgnoreCase(area)) {
-                List<String> series = Collections.emptyList();
-                Map<String, Object> frAggregation = buildFrAggregation(
-                        groupKey,
-                        technologyDistributions,
-                        zonalDistributions,
-                        generatedSeries
-                );
-                clusterMap.put(SERIES, series);
-                clusterMap.put(FR_AGGREGATION, frAggregation);
-            } else {
-                String series = resolveSingleSeries(area, groupKey, generatedSeries);
-                clusterMap.put(SERIES, List.of(series));
-            }
-
-            areaRes.put(groupKey, clusterMap);
-        });
-
-        return areaRes;
-    }
-
-    private Map<String, Object> buildFrAggregation(
-            String normalizedGroup,
-            List<ResTechnologyDistributionEntity> technologyDistributions,
-            List<ResZonalDistributionEntity> zonalDistributions,
-            List<ResSeriesRef> generatedSeries
-    ) {
-        Map<String, Double> zoneWeights = zonalDistributions.stream()
-                .filter(e -> normalizedGroup.equals(normalizeGroup(e.getGroupe())))
-                .collect(Collectors.toMap(
-                        e -> canonicalFrZone(e.getPecdZone()),
-                        e -> normalizeWeight(e.getCapacityByYear(), "zonal", e.getPecdZone(), e.getGroupe()),
-                        Double::sum,
-                        LinkedHashMap::new
-                ));
-
-        Map<String, Map<String, Double>> techWeightsByZone = new LinkedHashMap<>();
-        Map<String, Map<String, String>> seriesByZoneAndTech = new LinkedHashMap<>();
-
-        for (ResTechnologyDistributionEntity entity : technologyDistributions) {
-            if (!normalizedGroup.equals(normalizeGroup(entity.getGroupe()))) {
-                continue;
-            }
-            String zone = canonicalFrZone(entity.getPecdZone());
-            String technology = toKey(entity.getPecdTechnology());
-            double weight = normalizeWeight(entity.getCapacityByYear(), "technology", zone, entity.getPecdTechnology());
-
-            techWeightsByZone.computeIfAbsent(zone, ignored -> new LinkedHashMap<>()).put(technology, weight);
-            seriesByZoneAndTech.computeIfAbsent(zone, ignored -> new LinkedHashMap<>())
-                    .put(technology, resolveFrSeries(zone, normalizedGroup, technology, generatedSeries));
-        }
-
-        validateFrAggregation(normalizedGroup, zoneWeights, techWeightsByZone, seriesByZoneAndTech);
-
-        Map<String, Object> aggregation = new LinkedHashMap<>();
-        aggregation.put(ZONE_WEIGHTS, zoneWeights);
-        aggregation.put(TECH_WEIGHTS_BY_ZONE, techWeightsByZone);
-        aggregation.put(SERIES_BY_ZONE_AND_TECH, seriesByZoneAndTech);
-        return aggregation;
-    }
-
-    private void validateFrAggregation(
-            String normalizedGroup,
-            Map<String, Double> zoneWeights,
-            Map<String, Map<String, Double>> techWeightsByZone,
-            Map<String, Map<String, String>> seriesByZoneAndTech
-    ) {
-        if (zoneWeights.isEmpty() || techWeightsByZone.isEmpty() || seriesByZoneAndTech.isEmpty()) {
-            throw BusinessException.builder()
-                    .message("Missing FR aggregation data for RES group " + normalizedGroup)
-                    .httpStatus(HttpStatus.BAD_REQUEST)
-                    .build();
-        }
-
-        double totalZoneWeight = zoneWeights.values().stream().mapToDouble(Double::doubleValue).sum();
-        if (totalZoneWeight <= 0d) {
-            throw BusinessException.builder()
-                    .message("FR zone weights sum must be strictly positive for RES group " + normalizedGroup)
-                    .httpStatus(HttpStatus.BAD_REQUEST)
-                    .build();
-        }
-
-        for (String zone : zoneWeights.keySet()) {
-            Map<String, Double> techWeights = techWeightsByZone.get(zone);
-            Map<String, String> techSeries = seriesByZoneAndTech.get(zone);
-
-            if (techWeights == null || techWeights.isEmpty() || techSeries == null || techSeries.isEmpty()) {
-                throw BusinessException.builder()
-                        .message("Missing FR technology mapping for zone " + zone + IN_RES_GROUP_SUFFIX + normalizedGroup)
-                        .httpStatus(HttpStatus.BAD_REQUEST)
-                        .build();
-            }
-
-            double techSum = techWeights.values().stream().mapToDouble(Double::doubleValue).sum();
-            if (techSum <= 0d) {
-                throw BusinessException.builder()
-                        .message("FR technology weights sum must be strictly positive for zone " + zone + IN_RES_GROUP_SUFFIX + normalizedGroup)
-                        .httpStatus(HttpStatus.BAD_REQUEST)
-                        .build();
-            }
-        }
-    }
-
-    private String resolveSingleSeries(String area, String group, List<ResSeriesRef> generatedSeries) {
-        String areaKey = toKey(area);
-        String groupKey = toKey(group);
-
-        List<ResSeriesRef> fallbackCandidates = generatedSeries.stream()
-                .filter(ref -> ref.contains(areaKey))
-                .filter(ref -> ref.contains(groupKey))
-                .toList();
-
-        if (fallbackCandidates.size() == 1) {
-            return fallbackCandidates.getFirst().arrowPath();
+        if (match != null) {
+            return match.arrowPath();
         }
 
         throw BusinessException.builder()
@@ -273,28 +89,224 @@ public class ResGenerationAssemblerServiceImpl implements ResGenerationAssembler
                 .build();
     }
 
-    private String resolveFrSeries(String zone, String group, String technology, List<ResSeriesRef> generatedSeries) {
-        String zoneKey = toKey(zone);
-        String groupKey = toKey(group);
-        String technologyKey = toKey(technology);
+    private Map<String, Map<String, Object>> processAreaClusters(
+            Map<String, List<ResClusterCapacityEntity>> capacities,
+            TrajectoryCollections collections,
+            Map<String, ResSeriesRef> frSeriesIndex,
+            Map<String, ResSeriesRef> nonFrSeriesIndex
+    ) {
+        return capacities.entrySet().stream().collect(Collectors.toMap(
+                Map.Entry::getKey,
+                entry -> {
+                    var area = entry.getKey();
+                    var techs = collections.technologies().getOrDefault(area, Collections.emptyList());
+                    var zonals = collections.zonals().getOrDefault(area, Collections.emptyList());
+                    var context = new ClusterAggregationContext(area, techs, zonals, frSeriesIndex, nonFrSeriesIndex);
+                    return buildClustersForArea(entry.getValue(), context);
+                },
+                (a, b) -> a,
+                LinkedHashMap::new
+        ));
+    }
 
-        List<ResSeriesRef> candidates = generatedSeries.stream()
-                .filter(ref -> ref.contains(FR_AREA.toLowerCase(Locale.ROOT)))
-                .filter(ref -> ref.contains(zoneKey))
-                .filter(ref -> ref.contains(groupKey))
-                .filter(ref -> ref.contains(technologyKey))
-                .toList();
+    private Map<String, Object> buildClustersForArea(List<ResClusterCapacityEntity> capacities, ClusterAggregationContext context) {
+        return capacities.stream()
+                .collect(Collectors.groupingBy(cap -> normalizeGroup(cap.getGroupe()), LinkedHashMap::new, Collectors.toList()))
+                .entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> buildGroupCluster(entry.getKey(), entry.getValue(), context),
+                        (a, b) -> a,
+                        LinkedHashMap::new
+                ));
+    }
 
-        if (candidates.size() != 1) {
+    private Map<String, Object> buildGroupCluster(String groupKey, List<ResClusterCapacityEntity> entities, ClusterAggregationContext context) {
+        var installedPower = entities.stream()
+                .map(ResClusterCapacityEntity::getCapacityByYear)
+                .filter(Objects::nonNull)
+                .mapToDouble(BigDecimal::doubleValue)
+                .sum();
+
+        var clusterPropertiesMap = new LinkedHashMap<String, Object>();
+        clusterPropertiesMap.put(CAPACITY, installedPower);
+        clusterPropertiesMap.put(GROUP, groupKey);
+
+        var clusterMap = new LinkedHashMap<String, Object>();
+        clusterMap.put(PROPERTIES, clusterPropertiesMap);
+
+        if (FR_AREA.equalsIgnoreCase(context.area())) {
+            clusterMap.put(SERIES, Collections.emptyList());
+            clusterMap.put(FR_AGGREGATION, buildFrAggregation(
+                    groupKey, installedPower, context.techDistributions(), context.zonalDistributions(), context.frSeriesIndex()
+            ));
+        } else {
+            var seriesPath = resolveIndexedSingleSeries(context.area(), groupKey, context.nonFrSeriesIndex());
+            clusterMap.put(SERIES, List.of(seriesPath));
+        }
+
+        return clusterMap;
+    }
+
+    private Map<String, Object> buildFrAggregation(
+            String normalizedGroup,
+            double installedPower,
+            List<ResTechnologyDistributionEntity> technologyDistributions,
+            List<ResZonalDistributionEntity> zonalDistributions,
+            Map<String, ResSeriesRef> frSeriesIndex
+    ) {
+        var zoneWeights = calculateZoneWeights(normalizedGroup, zonalDistributions);
+        var techWeightsByZone = new LinkedHashMap<String, Map<String, Double>>();
+        var seriesByZoneAndTech = new LinkedHashMap<String, Map<String, String>>();
+
+        technologyDistributions.stream()
+                .filter(entity -> normalizedGroup.equals(normalizeGroup(entity.getGroupe())))
+                .forEach(entity -> processTechnologyEntity(
+                        entity, normalizedGroup, zoneWeights, techWeightsByZone, seriesByZoneAndTech, frSeriesIndex
+                ));
+
+        validateFrAggregation(normalizedGroup, installedPower, zoneWeights, techWeightsByZone, seriesByZoneAndTech);
+
+        var aggregation = new LinkedHashMap<String, Object>();
+        aggregation.put(ZONE_WEIGHTS, zoneWeights);
+        aggregation.put(TECH_WEIGHTS_BY_ZONE, techWeightsByZone);
+        aggregation.put(SERIES_BY_ZONE_AND_TECH, seriesByZoneAndTech);
+        return aggregation;
+    }
+
+    private Map<String, Double> calculateZoneWeights(
+            String normalizedGroup,
+            List<ResZonalDistributionEntity> zonalDistributions
+    ) {
+        return zonalDistributions.stream()
+                .filter(e -> normalizedGroup.equals(normalizeGroup(e.getGroupe())))
+                .collect(Collectors.toMap(
+                        e -> canonicalFrZone(e.getPecdZone()),
+                        e -> normalizeWeight(e.getCapacityByYear(), "zonal", e.getPecdZone(), e.getGroupe()),
+                        Double::sum,
+                        LinkedHashMap::new
+                ));
+    }
+
+    private void processTechnologyEntity(
+            ResTechnologyDistributionEntity entity,
+            String normalizedGroup,
+            Map<String, Double> zoneWeights,
+            Map<String, Map<String, Double>> techWeightsByZone,
+            Map<String, Map<String, String>> seriesByZoneAndTech,
+            Map<String, ResSeriesRef> frSeriesIndex
+    ) {
+        var zone = canonicalFrZone(entity.getPecdZone());
+        var zoneWeight = zoneWeights.getOrDefault(zone, 0d);
+
+        if (zoneWeight <= 0d) {
+            return;
+        }
+
+        var technology = toKey(entity.getPecdTechnology());
+        var weight = normalizeWeight(entity.getCapacityByYear(), "technology", zone, entity.getPecdTechnology());
+
+        techWeightsByZone.computeIfAbsent(zone, k -> new LinkedHashMap<>()).put(technology, weight);
+
+        var arrowPath = resolveIndexedFrSeries(zone, normalizedGroup, technology, frSeriesIndex);
+        seriesByZoneAndTech.computeIfAbsent(zone, k -> new LinkedHashMap<>()).put(technology, arrowPath);
+    }
+
+    private String resolveIndexedFrSeries(
+            String zone,
+            String group,
+            String technology,
+            Map<String, ResSeriesRef> frSeriesIndex
+    ) {
+        var candidateKeys = buildFrTechnologyCandidateKeys(group, technology);
+
+        for (var candidateKey : candidateKeys) {
+            var lookupKey = zone.toUpperCase(Locale.ROOT) + "_" + group.toUpperCase(Locale.ROOT) + "_" + candidateKey.toUpperCase(Locale.ROOT);
+            var match = frSeriesIndex.get(lookupKey);
+            if (match != null) {
+                return match.arrowPath();
+            }
+        }
+
+        throw BusinessException.builder()
+                .message("FR RES series resolution must return exactly one arrow for zone " + zone + " and technology " + technology)
+                .httpStatus(HttpStatus.BAD_REQUEST)
+                .build();
+    }
+
+    private void validateFrAggregation(
+            String normalizedGroup,
+            double installedPower,
+            Map<String, Double> zoneWeights,
+            Map<String, Map<String, Double>> techWeightsByZone,
+            Map<String, Map<String, String>> seriesByZoneAndTech
+    ) {
+        if (installedPower <= 0d) {
+            return;
+        }
+
+        if (zoneWeights.isEmpty()) {
             throw BusinessException.builder()
-                    .message("FR RES series resolution must return exactly one arrow for zone " + zone + " and technology " + technology)
+                    .message("Missing FR aggregation data for RES group " + normalizedGroup)
                     .httpStatus(HttpStatus.BAD_REQUEST)
                     .build();
         }
-        return candidates.getFirst().arrowPath();
+
+        zoneWeights.forEach((zone, weight) ->
+                validateZoneAggregation(normalizedGroup, zone, weight, techWeightsByZone, seriesByZoneAndTech));
     }
 
-    private List<ResSeriesRef> createArrowSeriesForResLoad(StudyEntity studyEntity, Set<String> expectedSeriesPrefixes) {
+    private void validateZoneAggregation(
+            String normalizedGroup,
+            String zone,
+            Double zoneWeight,
+            Map<String, Map<String, Double>> techWeightsByZone,
+            Map<String, Map<String, String>> seriesByZoneAndTech
+    ) {
+        if (zoneWeight != null && zoneWeight > 0d) {
+            Map<String, Double> techWeights = techWeightsByZone.get(zone);
+
+            // A zone with zoneWeight > 0 must have technology distribution rows.
+            if (techWeights == null || techWeights.isEmpty()) {
+                if (log.isDebugEnabled()) {
+                    log.debug("Missing FR technology rows for active zone {} in RES group {}", zone, normalizedGroup);
+                }
+                throw BusinessException.builder()
+                        .message("Missing FR technology mapping for zone " + zone + IN_RES_GROUP_SUFFIX + normalizedGroup)
+                        .httpStatus(HttpStatus.BAD_REQUEST)
+                        .build();
+            }
+
+            if (log.isDebugEnabled()) {
+                Map<String, String> techSeries = seriesByZoneAndTech.get(zone);
+                log.debug("Validated FR tech rows for zone {} in RES group {}: techCount={}, techSum={}, seriesCount={}",
+                        zone,
+                        normalizedGroup,
+                        techWeights.size(),
+                        techWeights.values().stream().mapToDouble(Double::doubleValue).sum(),
+                        techSeries == null ? 0 : techSeries.size());
+            }
+        } else if (log.isDebugEnabled()) {
+            log.debug("Zone {} has zoneWeight={}, skipping tech/series validation", zone, zoneWeight);
+        }
+    }
+
+    private Set<String> buildFrTechnologyCandidateKeys(String group, String technology) {
+        String normalizedGroup = toKey(group);
+        String normalizedTechnology = toKey(technology);
+
+        Set<String> candidates = new LinkedHashSet<>();
+        candidates.add(normalizedTechnology);
+
+        String groupPrefix = normalizedGroup + "_";
+        if (normalizedTechnology.startsWith(groupPrefix) && normalizedTechnology.length() > groupPrefix.length()) {
+            candidates.add(normalizedTechnology.substring(groupPrefix.length()));
+        }
+
+        return candidates;
+    }
+
+    private List<ResSeriesRef> createArrowSeriesForResLoad(StudyEntity studyEntity) {
         List<TrajectoryEntity> resLoadTrajectories = studyEntity.getTrajectories().stream()
                 .filter(Objects::nonNull)
                 .filter(t -> TrajectoryType.RES_LOAD.name().equals(t.getType()))
@@ -311,48 +323,64 @@ public class ResGenerationAssemblerServiceImpl implements ResGenerationAssembler
 
         List<ResSeriesRef> result = new ArrayList<>();
         for (TrajectoryEntity trajectory : resLoadTrajectories) {
-            String trajectoryFileName = trajectory.getFileName();
-            if (trajectoryFileName == null || trajectoryFileName.isBlank()) {
-                continue;
-            }
-            try {
-                pathSecurityUtil.validatePathFromBaseDir(trajectoryFileName, AntaresDataManagerProperties::getResLoadDirectory);
-                Path trajectoryRoot = base.resolve(trajectoryFileName).normalize();
-                if (!trajectoryRoot.startsWith(base) || !Files.exists(trajectoryRoot)) {
-                    throw BusinessException.builder()
-                            .message("Invalid RES load trajectory path: " + trajectoryFileName)
-                            .httpStatus(HttpStatus.BAD_REQUEST)
-                            .build();
-                }
-
-                try (var walk = Files.walk(trajectoryRoot)) {
-                    walk.filter(Files::isRegularFile)
-                            .filter(file -> !isInOldSubdirectory(trajectoryRoot, file))
-                            .filter(file -> isSupportedSeriesFormat(file, expectedSeriesPrefixes))
-                            .forEach(file -> {
-                                String outputDir = antaresDataManagerProperties.getOutputLoadDirectory();
-                                try {
-                                    String arrowName = nasFileService.saveMatrixToNas(file, outputDir);
-                                    String rel = trajectoryRoot.relativize(file).toString();
-                                    String normalizedRel = toKey(rel.replace('\\', '/'));
-                                    result.add(new ResSeriesRef(normalizedRel, arrowName));
-                                } catch (IOException e) {
-                                    throw TechnicalException.builder()
-                                            .message("Could not generate RES arrow file from " + file)
-                                            .cause(e)
-                                            .build();
-                                }
-                            });
-                }
-            } catch (IOException e) {
-                throw TechnicalException.builder()
-                        .message("Could not list RES load trajectory files for " + trajectoryFileName)
-                        .cause(e)
-                        .build();
-            }
+            resolveSeriesInTrajectory(trajectory, base, result);
         }
 
         return result;
+    }
+
+    private void resolveSeriesInTrajectory(TrajectoryEntity trajectory, Path base, List<ResSeriesRef> result) {
+        String trajectoryFileName = trajectory.getFileName();
+        if (trajectoryFileName == null || trajectoryFileName.isBlank()) {
+            return;
+        }
+
+        try {
+            pathSecurityUtil.validatePathFromBaseDir(trajectoryFileName, AntaresDataManagerProperties::getResLoadDirectory);
+            Path trajectoryRoot = base.resolve(trajectoryFileName).normalize();
+
+            if (!trajectoryRoot.startsWith(base) || !Files.exists(trajectoryRoot)) {
+                throw BusinessException.builder()
+                        .message("Invalid RES load trajectory path: " + trajectoryFileName)
+                        .httpStatus(HttpStatus.BAD_REQUEST)
+                        .build();
+            }
+
+            try (var walk = Files.walk(trajectoryRoot)) {
+                walk.filter(Files::isRegularFile)
+                        .filter(file -> !isInOldSubdirectory(trajectoryRoot, file))
+                        .filter(this::isSupportedSeriesFormat)
+                        .forEach(file -> createSeriesFromFile(file, trajectoryRoot, result));
+            }
+        } catch (IOException e) {
+            throw TechnicalException.builder()
+                    .message("Could not list RES load trajectory files for " + trajectoryFileName)
+                    .cause(e)
+                    .build();
+        }
+    }
+
+    private void createSeriesFromFile(Path file, Path trajectoryRoot, List<ResSeriesRef> result) {
+        String rel = trajectoryRoot.relativize(file).toString();
+        parseSeriesKeyFromRelativePath(rel).ifPresent(parsedKey -> {
+            String outputDir = antaresDataManagerProperties.getResTsOutputDirectory();
+            try {
+                String arrowName = nasFileService.saveMatrixToNas(file, outputDir);
+                result.add(new ResSeriesRef(
+                        toKey(rel.replace('\\', '/')),
+                        arrowName,
+                        parsedKey.area(),
+                        parsedKey.group(),
+                        parsedKey.zone(),
+                        parsedKey.technology()
+                ));
+            } catch (IOException e) {
+                throw TechnicalException.builder()
+                        .message("Could not generate RES arrow file from " + file)
+                        .cause(e)
+                        .build();
+            }
+        });
     }
 
     private boolean isInOldSubdirectory(Path trajectoryRoot, Path file) {
@@ -365,25 +393,105 @@ public class ResGenerationAssemblerServiceImpl implements ResGenerationAssembler
         return false;
     }
 
-    private String prefixFromGroup(String normalizedGroup) {
-        String key = toKey(normalizedGroup);
-
-        int separatorIndex = key.indexOf('_');
-        String prefixRoot = separatorIndex > 0 ? key.substring(0, separatorIndex) : key;
-        return prefixRoot + "_";
-    }
-
-    private boolean isSupportedSeriesFormat(Path file, Set<String> expectedSeriesPrefixes) {
+    private boolean isSupportedSeriesFormat(Path file) {
         String lowerName = file.getFileName().toString().toLowerCase(Locale.ROOT);
         boolean hasSupportedExtension = lowerName.endsWith(".csv") || lowerName.endsWith(".txt") || lowerName.endsWith(".xlsx");
-        if (!hasSupportedExtension || lowerName.startsWith(".~lock.")) {
-            return false;
+        return hasSupportedExtension && !lowerName.startsWith(".~lock.");
+    }
+
+    private Optional<ParsedSeriesKey> parseSeriesKeyFromRelativePath(String relativePath) {
+        String fileName = Path.of(relativePath).getFileName().toString();
+        int extensionIndex = fileName.lastIndexOf('.');
+        String baseName = extensionIndex > 0 ? fileName.substring(0, extensionIndex) : fileName;
+        String normalizedBaseName = toKey(baseName);
+        List<String> tokens = Arrays.stream(normalizedBaseName.split("_"))
+                .filter(token -> !token.isBlank())
+                .toList();
+        return parseSeriesKey(tokens);
+    }
+
+    private Optional<ParsedSeriesKey> parseSeriesKey(List<String> tokens) {
+        if (tokens.size() < 3) {
+            return Optional.empty();
         }
 
-        int extensionIndex = lowerName.lastIndexOf('.');
-        String baseName = extensionIndex > 0 ? lowerName.substring(0, extensionIndex) : lowerName;
-        String normalizedBaseName = toKey(baseName);
-        return expectedSeriesPrefixes.stream().anyMatch(normalizedBaseName::startsWith);
+        Optional<ParsedSeriesKey> styleA = parseSeriesKeyFromStyleA(tokens);
+        if (styleA.isPresent()) {
+            return styleA;
+        }
+        return parseSeriesKeyFromStyleB(tokens);
+    }
+
+    private Optional<ParsedSeriesKey> parseSeriesKeyFromStyleA(List<String> tokens) {
+        // Case A: <groupPrefix>_<areaOrZone>_<groupSuffix>_[tech...]_[horizon]
+        String areaOrZone = tokens.get(1);
+        Optional<String> normalizedGroup = tryNormalizeGroup(tokens.get(0), tokens.get(2));
+        if (normalizedGroup.isEmpty()) {
+            return Optional.empty();
+        }
+        return buildParsedSeriesKey(areaOrZone, normalizedGroup.get(), tokens, 3);
+    }
+
+    private Optional<ParsedSeriesKey> parseSeriesKeyFromStyleB(List<String> tokens) {
+        // Casse B: <groupPrefix>_<groupSuffix>_<areaOrZone>_[tech...]_[horizon]
+        if (tokens.size() < 4) {
+            return Optional.empty();
+        }
+        String areaOrZone = tokens.get(2);
+        Optional<String> normalizedGroup = tryNormalizeGroup(tokens.get(0), tokens.get(1));
+        if (normalizedGroup.isEmpty()) {
+            return Optional.empty();
+        }
+        return buildParsedSeriesKey(areaOrZone, normalizedGroup.get(), tokens, 3);
+    }
+
+    private Optional<ParsedSeriesKey> buildParsedSeriesKey(String areaOrZone, String normalizedGroup, List<String> tokens, int technologyStartIndex) {
+        if (isFrZone(areaOrZone)) {
+            String zone = areaOrZone.toUpperCase(Locale.ROOT);
+            List<String> technologyTokens = trimTrailingYearTokens(tokens.subList(technologyStartIndex, tokens.size()));
+            if (technologyTokens.isEmpty()) {
+                return Optional.empty();
+            }
+            String technology = String.join("_", technologyTokens);
+            return Optional.of(new ParsedSeriesKey(FR_AREA, normalizedGroup, zone, technology));
+        }
+
+        String area = areaOrZone.toUpperCase(Locale.ROOT);
+        return Optional.of(new ParsedSeriesKey(area, normalizedGroup, null, null));
+    }
+
+    private List<String> trimTrailingYearTokens(List<String> tokens) {
+        List<String> trimmed = new ArrayList<>(tokens);
+        if (hasTrailingHorizonPair(trimmed)) {
+            trimmed.remove(trimmed.size() - 1);
+            trimmed.remove(trimmed.size() - 1);
+        }
+        return trimmed;
+    }
+
+    private boolean hasTrailingHorizonPair(List<String> tokens) {
+        if (tokens.size() < 2) {
+            return false;
+        }
+        String last = tokens.get(tokens.size() - 1);
+        String previous = tokens.get(tokens.size() - 2);
+        return isYearToken(previous) && isYearToken(last);
+    }
+
+    private boolean isYearToken(String token) {
+        return token != null && token.matches("\\d{4}");
+    }
+
+    private boolean isFrZone(String token) {
+        return token != null && token.matches("(?i)fr\\d+");
+    }
+
+    private Optional<String> tryNormalizeGroup(String first, String second) {
+        try {
+            return Optional.of(normalizeGroup(first + "_" + second));
+        } catch (BusinessException ignored) {
+            return Optional.empty();
+        }
     }
 
     private String normalizeGroup(String group) {
@@ -399,7 +507,7 @@ public class ResGenerationAssemblerServiceImpl implements ResGenerationAssembler
 
     private String canonicalFrZone(String zone) {
         String normalized = zone == null ? "" : zone.trim().toUpperCase(Locale.ROOT);
-        if (!VALID_FR_ZONES.contains(normalized)) {
+        if (normalized.isBlank() || !normalized.matches("FR\\d+")) {
             throw BusinessException.builder()
                     .message("Invalid FR zone key: " + zone)
                     .httpStatus(HttpStatus.BAD_REQUEST)
@@ -408,13 +516,6 @@ public class ResGenerationAssemblerServiceImpl implements ResGenerationAssembler
         return normalized;
     }
 
-    private static Set<String> buildFrZones() {
-        Set<String> zones = new LinkedHashSet<>();
-        for (int i = 1; i <= 26; i++) {
-            zones.add("FR" + String.format("%02d", i));
-        }
-        return zones;
-    }
 
     private double normalizeWeight(Number rawWeight, String weightType, String zone, String key) {
         if (rawWeight == null) {
@@ -443,9 +544,138 @@ public class ResGenerationAssemblerServiceImpl implements ResGenerationAssembler
                 .replaceAll("\\s+", "_");
     }
 
-    private record ResSeriesRef(String sourceKey, String arrowPath) {
-        boolean contains(String token) {
-            return sourceKey.contains(token);
+    private record ResSeriesRef(String sourceKey, String arrowPath, String area, String group, String zone, String technology) {
+        boolean matchesNonFr(String expectedArea, String expectedGroup) {
+            return !FR_AREA.equalsIgnoreCase(area)
+                    && area.equalsIgnoreCase(expectedArea)
+                    && group.equalsIgnoreCase(expectedGroup);
         }
+
+        boolean matchesFr(String expectedZone, String expectedGroup, String expectedTechnology) {
+            return FR_AREA.equalsIgnoreCase(area)
+                    && zone != null
+                    && zone.equalsIgnoreCase(expectedZone)
+                    && group.equalsIgnoreCase(expectedGroup)
+                    && technology != null
+                    && technology.equalsIgnoreCase(expectedTechnology);
+        }
+    }
+
+    private record ParsedSeriesKey(String area, String group, String zone, String technology) {
+    }
+
+    private Map<String, ResSeriesRef> indexNonFrSeries(List<ResSeriesRef> series) {
+        return series.stream()
+                .filter(ref -> !FR_AREA.equalsIgnoreCase(ref.area()))
+                .collect(Collectors.toMap(
+                        ref -> ref.area().toUpperCase(Locale.ROOT) + "_" + ref.group().toUpperCase(Locale.ROOT),
+                        ref -> ref,
+                        (existing, replacement) -> {
+                            throw BusinessException.builder()
+                                    .message("Duplicate non-FR series found")
+                                    .httpStatus(HttpStatus.BAD_REQUEST)
+                                    .build();
+                        }
+                ));
+    }
+
+    private Map<String, ResSeriesRef> indexFrSeries(List<ResSeriesRef> series) {
+        return series.stream()
+                .filter(ref -> FR_AREA.equalsIgnoreCase(ref.area()))
+                .collect(Collectors.toMap(
+                        ref -> ref.zone().toUpperCase(Locale.ROOT) + "_" + ref.group().toUpperCase(Locale.ROOT) + "_" + ref.technology().toUpperCase(Locale.ROOT),
+                        ref -> ref,
+                        (existing, replacement) -> existing
+                ));
+    }
+
+    private record TrajectoryCollections(
+            Map<String, List<ResClusterCapacityEntity>> capacities,
+            Map<String, List<ResTechnologyDistributionEntity>> technologies,
+            Map<String, List<ResZonalDistributionEntity>> zonals
+    ) {}
+
+    private TrajectoryCollections collectTrajectoriesSinglePass(StudyEntity studyEntity) {
+        var capacities = new LinkedHashMap<String, List<ResClusterCapacityEntity>>();
+        var technologies = new LinkedHashMap<String, List<ResTechnologyDistributionEntity>>();
+        var zonals = new LinkedHashMap<String, List<ResZonalDistributionEntity>>();
+
+        studyEntity.getTrajectories().stream()
+                .filter(Objects::nonNull)
+                .forEach(trajectory -> routeTrajectoryData(trajectory, capacities, technologies, zonals));
+
+        return new TrajectoryCollections(capacities, technologies, zonals);
+    }
+
+    private void routeTrajectoryData(
+            TrajectoryEntity trajectory,
+            Map<String, List<ResClusterCapacityEntity>> capacities,
+            Map<String, List<ResTechnologyDistributionEntity>> technologies,
+            Map<String, List<ResZonalDistributionEntity>> zonals
+    ) {
+        var type = TrajectoryType.valueOf(trajectory.getType());
+
+        switch (type) {
+            case RES_CAPACITY -> extractCapacities(trajectory, capacities);
+            case RES_TECHNOLOGY_DISTRIBUTION -> extractTechnologies(trajectory, technologies);
+            case RES_ZONAL_DISTRIBUTION -> extractZonals(trajectory, zonals);
+            default -> { /* ignore */}
+        }
+    }
+
+    private void extractCapacities(
+            TrajectoryEntity trajectory,
+            Map<String, List<ResClusterCapacityEntity>> accumulator
+    ) {
+        var entities = trajectory.getResClusterCapacityEntities();
+        if (entities == null) return;
+
+        entities.stream()
+                .filter(this::isValidCapacityEntity)
+                .forEach(e -> accumulateByArea(e, e.getArea(), accumulator));
+    }
+
+    private void extractTechnologies(
+            TrajectoryEntity trajectory,
+            Map<String, List<ResTechnologyDistributionEntity>> accumulator
+    ) {
+        var entities = trajectory.getResTechnologyDistributionCapacityEntities();
+        if (entities == null) return;
+
+        entities.stream()
+                .filter(this::isValidTechnologyEntity)
+                .forEach(e -> accumulateByArea(e, e.getArea(), accumulator));
+    }
+
+    private boolean isValidTechnologyEntity(ResTechnologyDistributionEntity e) {
+        return e != null && e.getArea() != null && e.getGroupe() != null
+                && e.getPecdZone() != null && e.getPecdTechnology() != null;
+    }
+
+    private void extractZonals(
+            TrajectoryEntity trajectory,
+            Map<String, List<ResZonalDistributionEntity>> accumulator
+    ) {
+        var entities = trajectory.getResZonalDistributionCapacityEntities();
+        if (entities == null) return;
+
+        entities.stream()
+                .filter(this::isValidZonalEntity)
+                .forEach(e -> accumulateByArea(e, e.getArea(), accumulator));
+    }
+
+    private boolean isValidZonalEntity(ResZonalDistributionEntity e) {
+        return e != null && e.getArea() != null
+                && e.getGroupe() != null && e.getPecdZone() != null;
+    }
+
+    private boolean isValidCapacityEntity(ResClusterCapacityEntity e) {
+        return e != null && Boolean.TRUE.equals(e.getToUse())
+                && e.getArea() != null && e.getGroupe() != null && e.getCluster() != null;
+    }
+
+    private <T> void accumulateByArea(T entity, String rawArea, Map<String, List<T>> map) {
+        var normalizedArea = rawArea.toUpperCase(Locale.ROOT);
+        map.computeIfAbsent(normalizedArea, k -> new ArrayList<>()).add(entity);
     }
 }
